--- a/index.html
+++ b/index.html
@@ -279,11 +279,14 @@
 <div id="more" class="content">
     <div style="max-width:900px;margin:0 auto;">
         <h2 style="text-align:center;color:var(--romantic);font-size:1.8rem;margin-bottom:1.5rem;">更多札幌推薦地點</h2>
+        
         <div class="sub-tabs">
             <div class="sub-tab-btn" onclick="openSubTab('attractions')">景點</div>
             <div class="sub-tab-btn active" onclick="openSubTab('restaurants')">餐廳</div>
         </div>
-        <div id="attractions" class="sub-content active">
+
+        <!-- 景點（點擊才顯示） -->
+        <div id="attractions" class="sub-content">
         <div class="location-card">
             <h3><a href="https://www.google.com/maps/search/?api=1&query=%E7%99%BD%E8%89%B2%E6%88%80%E4%BA%BA%E5%85%AC%E5%9C%92+Sapporo" target="_blank">白色戀人公園</a></h3>
             <div class="time">開園時間：10:00–19:00</div>
