Remove comment and adjust restaurant div structure

--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
         <div class="back-to-overview" onclick="openTab('overview')">
             返回總覽
         </div>
-            <!-- 餐廳 - fully restored -->
-    <div id="restaurants" class="sub-content active">      
+    
+    <div id="restaurants" class="sub-content">      
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97%E3%81%A0%E3%82%8B%E3%81%BE+%E6%9C%AC%E5%BA%97+Sapporo" target="_blank">成吉思汗だるま 本店</a></h3>
                 <div class="time">營業時間：11:30–23:00</div>
@@ -426,7 +426,7 @@
                 <div class="price">建議價格：HK$700–1,200/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1081057/" target="_blank">Tabelog 連結</a>
             </div>
-<div class="location-card">
+            <div class="location-card">
                 <h3><a href="https://tabelog.com/hokkaido/A0101/A010104/1055049/" target="_blank">Lumière et ombre (リュミエール エ オンブル)</a></h3>
                 <div class="time">營業時間：11:00–19:00（定休日：火、水）</div>
                 <div class="desc">札幌人氣巧克力與蛋糕專門店，使用高品質巧克力製作精緻甜點，冬季限定口味超療癒，適合甜點控。</div>
