--- a/index.html
+++ b/index.html
@@ -24,39 +24,133 @@
     .header {
         background: linear-gradient(135deg, var(--pink), var(--romantic));
         color: white;
-        padding: 2rem 1rem;
+        padding: 2.5rem 1rem;
         text-align: center;
         box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-    .tabs, .sub-tabs {
+    .header h1 { font-size: 2.2rem; margin: 0 0 0.5rem; }
+    .header p { font-size: 1.4rem; margin: 0; }
+    .tabs {
+        max-width: 100%;
+        margin: 2rem auto 1.5rem;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        gap: 0.5rem;
-        margin: 1.5rem auto 1rem;
+        border-bottom: 4px solid var(--pink);
+        padding: 0 1rem;
+        gap: 0.6rem;
     }
-    .tab-btn, .sub-tab-btn {
-        background: white;
-        padding: 0.8rem 1.2rem;
+    .tab-btn {
+        background: #fff;
+        padding: 1rem 1.4rem;
+        font-size: 1.3rem;
+        cursor: pointer;
+        border-radius: 15px 15px 0 0;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        font-weight: bold;
+        flex: 1 1 150px;
+        max-width: 200px;
+        text-align: center;
+    }
+    .tab-btn.active { background: var(--pink); color: #333; }
+    .content {
+        max-width: 1100px;
+        margin: 0 auto 4rem;
+        padding: 0 1.5rem;
+        display: none;
+    }
+    .content.active { display: block; }
+    .sub-tabs {
+        margin: 1.5rem 0 1rem;
+        display: flex;
+        justify-content: center;
+        border-bottom: 2px solid var(--pink);
+        flex-wrap: wrap;
+        gap: 0.5rem;
+    }
+    .sub-tab-btn {
+        background: #fff;
+        padding: 0.7rem 1.2rem;
         font-size: 1.1rem;
         cursor: pointer;
         border-radius: 12px 12px 0 0;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         font-weight: bold;
+        flex: 1 1 120px;
+        max-width: 200px;
         text-align: center;
     }
-    .tab-btn.active, .sub-tab-btn.active {
+    .sub-tab-btn.active { background: var(--pink); color: #333; }
+    .sub-content { display: none; }
+    .sub-content.active { display: block; }
+    .day {
+        background: white;
+        padding: 1.8rem;
+        border-radius: 18px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+        margin-bottom: 1.6rem;
+        border-left: 10px solid var(--pink);
+    }
+    .day h2 { font-size: 1.6rem; margin: 0 0 1rem; color: var(--romantic); }
+    .big-btn {
         background: var(--pink);
-        color: white;
+        color: #333;
+        padding: 1.2rem;
+        font-size: 1.4rem;
+        width: 100%;
+        border: none;
+        border-radius: 14px;
+        margin-top: 1rem;
+        cursor: pointer;
+        font-weight: bold;
     }
-    .content, .sub-content {
-        max-width: 1100px;
-        margin: 0 auto 3rem;
-        padding: 0 1rem;
-        display: none;
+    .big-btn:hover { background: var(--romantic); color: white; }
+    .detail-day {
+        background: white;
+        padding: 1.8rem;
+        border-radius: 20px;
+        box-shadow: 0 12px 40px rgba(0,0,0,0.15);
+        margin: 1.5rem auto;
+        border: 1px solid var(--pink);
     }
-    .content.active, .sub-content.active {
+    .hero-img, .hero-img-top {
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover;
+        border-radius: 18px;
+        margin: 1rem 0;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+    .hero-img-top { max-height: 420px; }
+    .weather-box, .snow-box {
+        padding: 1rem;
+        border-radius: 10px;
+        margin: 1rem 0;
+        border-left: 5px solid var(--pink);
+        font-size: 0.95rem;
+    }
+    .weather-box { background: #ffebee; border-left-color: var(--pink); }
+    .snow-box { background: #fff0f8; border-left-color: var(--romantic); }
+    .step {
+        margin: 1.2rem 0;
+        padding: 1.2rem;
+        background: #fff0f8;
+        border-left: 6px solid var(--pink);
+        border-radius: 10px;
+        font-size: 1rem;
+    }
+    .time { color: var(--romantic); font-weight: bold; font-size: 1.05rem; }
+    .meal { font-weight: bold; color: var(--romantic); }
+    .ticket-link {
         display: block;
+        background: var(--romantic);
+        color: white;
+        padding: 1rem;
+        text-align: center;
+        border-radius: 12px;
+        font-weight: bold;
+        margin: 1rem 0;
+        font-size: 1rem;
     }
     .location-card {
         background: white;
@@ -66,20 +160,35 @@
         margin-bottom: 1.4rem;
         border-left: 6px solid var(--pink);
     }
+    .location-card h3 { font-size: 1.35rem; margin: 0 0 0.6rem; color: var(--romantic); }
+    .location-card .time { font-size: 0.95rem; color: #666; margin: 0.4rem 0; }
+    .location-card .desc { font-size: 1rem; color: #555; margin: 0.8rem 0; line-height: 1.6; }
+    .location-card .price { font-size: 0.95rem; color: #B8860B; font-weight: bold; margin-top: 0.4rem; }
     .back-to-overview, .back-top {
         display: block;
         width: 90%;
         max-width: 400px;
         margin: 2rem auto;
-        padding: 1rem;
+        padding: 1.1rem;
         text-align: center;
         border-radius: 50px;
         font-size: 1.2rem;
         font-weight: bold;
+        box-shadow: 0 6px 20px rgba(0,0,0,0.2);
         cursor: pointer;
     }
     .back-top { background: var(--pink); color: white; }
     .back-to-overview { background: var(--romantic); color: #333; }
+    @media (max-width: 768px) {
+        body { font-size: 15px; }
+        .header { padding: 1.5rem 1rem; }
+        .header h1 { font-size: 1.6rem; }
+        .tab-btn { font-size: 1.15rem; padding: 0.8rem 1rem; }
+        .day { padding: 1.4rem; }
+        .big-btn { font-size: 1.3rem; }
+        .detail-day { padding: 1.4rem; }
+        .hero-img { max-height: 220px; }
+    }
 </style>
 </head>
 <body>
@@ -272,13 +381,12 @@
 <div id="more" class="content">
     <div style="max-width:900px;margin:0 auto;">
         <h2 style="text-align:center;color:var(--romantic);font-size:1.8rem;margin-bottom:1.5rem;">更多札幌推薦地點</h2>
-        
+
         <div class="sub-tabs">
             <div class="sub-tab-btn" onclick="openSubTab('attractions')">景點</div>
             <div class="sub-tab-btn active" onclick="openSubTab('restaurants')">餐廳</div>
         </div>
 
-        <!-- 景點（點擊才顯示） -->
         <div id="attractions" class="sub-content">
         <div class="location-card">
             <h3><a href="https://www.google.com/maps/search/?api=1&query=%E7%99%BD%E8%89%B2%E6%88%80%E4%BA%BA%E5%85%AC%E5%9C%92+Sapporo" target="_blank">白色戀人公園</a></h3>
@@ -362,7 +470,7 @@
             返回總覽
         </div>
     
-<div id="restaurants" class="sub-content active">
+<div id="restaurants" class="sub-content active" style="display:block !important;">
             <!-- Your original restaurants -->
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97%E3%81%A0%E3%82%8B%E3%81%BE+%E6%9C%AC%E5%BA%97+Sapporo" target="_blank">成吉思汗だるま 本店</a></h3>
