--- a/index.html
+++ b/index.html
@@ -759,18 +759,54 @@ function showDetail(day){
         </div>
     </div>`,
 
-        3: `<div class="detail-day">
-            <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 3　定山溪溫泉放空</h2>
-            <div class="weather-box"><strong>2月1日天氣預報（長期平均）：</strong> 高溫 -3°C / 低溫 -9°C，多雲偶雪</div>
-            <div class="snow-box"><strong>即時雪況預測：</strong> 溫泉區雪景優美（基於歷史長期平均）</div>
-            <img src="https://img.bobblog.tw/webp/2019/Hokkaido/travel/hoheikyo-hot-springs/hoheikyo-hot-springs04.jpg.webp" class="hero-img" alt="定山溪溫泉">
-            <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭高速巴士（60分鐘）</div>
-            <div class="step"><span class="time">11:00 – 18:00</span>　泡湯＋足湯街＋散步</div>
-            <div class="step"><span class="time">18:30</span>　溫泉旅館懷石料理</div>
-            <a href="https://www.jozankei.jp/en/" target="_blank" class="ticket-link">定山溪官方旅遊網（英文）</a>
-            <a href="https://www.klook.com/zh-HK/activity/12748-jozankei-oncen-day-pass-sapporo/" target="_blank" class="ticket-link">Klook 巴士＋溫泉套票</a>
-            <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank" class="location-link">路線</a></div>
-            </div>`,
+       3: `<div class="detail-day">
+    <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 3　定山溪溫泉放空 + 白色戀人公園 + 支笏湖冰濤節</h2>
+
+    <div class="step"><span class="time">09:00 – 10:30</span>　從Airbnb出發 → 前往白色戀人公園</div>
+    
+    <div class="step"><span class="time">11:00 – 14:00</span>　<strong>白色戀人公園 (Shiroi Koibito Park)</strong><br>
+    冬季限定浪漫燈飾、巧克力工廠參觀、現烤白色戀人餅乾、聖誕風格拍照點<br>
+    建議買伴手禮（巧克力、餅乾禮盒）<br>
+    <small style="color:#555; display:block; margin-top:0.5rem;">
+        從札幌市中心搭地鐵東西線到「宮之澤站」下車，步行約7–10分鐘即到。
+    </small><br>
+    <a href="https://www.google.com/maps/dir/Grandir+Sapporo,+Kita+11+Johigashi-1-8+Chome,+Higashi+Ward,+Sapporo,+Hokkaido+065-0011/Shiroi+Koibito+Park,+2+Ch%C5%8Dme-11-36+Miyanosawa,+Nishi+Ward,+Sapporo,+Hokkaido+063-0820/@43.074,141.278,13z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x5f0b2d8f8f8f8f8f:0x1234567890abcdef!2m2!1d141.3528!2d43.066!1m5!1m1!1s0x5f0b2d8f8f8f8f8f:0xabcdef1234567890!2m2!1d141.278!2d43.074!3e3" target="_blank" style="color:var(--romantic);font-weight:bold;">
+    → Google Maps 路線（從住宿到白色戀人公園，約40–50分鐘，建議搭地鐵+巴士）
+    </a></div>
+
+    <div class="step"><span class="time">12:30 – 13:30</span>　<strong>午餐：Chocolate Lounge OXFORD</strong><br>
+    白色戀人公園內/附近的高級巧克力咖啡廳，招牌熱巧克力、巧克力甜點、輕食三明治，超適合情侶或甜點控</div>
+
+    <div class="step"><span class="time">13:30 – 14:30</span>　<strong>Bakeshop CHELSEA</strong><br>
+    附近人氣烘焙店，新鮮出爐的麵包、蛋糕、司康，推薦買幾個當下午茶或帶走</div>
+
+    <div class="step"><span class="time">14:30 – 15:00</span>　從白色戀人公園出發 → 前往支笏湖冰濤節</div>
+
+    <div class="step"><span class="time">15:00 – 18:00</span>　<strong>支笏湖冰濤節 (Lake Shikotsu Ice Festival)</strong><br>
+    冰雕燈光秀、冰滑梯、冰上活動、熱飲攤位，冬季限定浪漫雪景<br>
+    <strong>最佳交通方式：</strong> 從札幌站搭高速巴士（中央巴士）直達支笏湖溫泉（約1小時10分–1小時30分，冬季有冰濤節專車或加班車）<br>
+    費用：單程約 ¥1,200–1,500 / 人<br>
+    <a href="https://www.google.com/maps/dir/Shiroi+Koibito+Park,+2+Ch%C5%8Dme-11-36+Miyanosawa,+Nishi+Ward,+Sapporo,+Hokkaido+063-0820/Lake+Shikotsu+Ice+Festival,+Shikotsuko+Onsen,+Chitose,+Hokkaido+066-0281/@42.85,141.3,10z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x5f0b2d8f8f8f8f8f:0xabcdef1234567890!2m2!1d141.278!2d43.074!1m5!1m1!1s0x5f8e8f8f8f8f8f8f:0x1234567890abcdef!2m2!1d141.35!2d42.75!3e3" target="_blank" style="color:var(--romantic);font-weight:bold;">
+    → Google Maps 路線（從白色戀人公園到支笏湖冰濤節，約1.5–2小時，巴士為主）
+    </a></div>
+
+    <!-- Day 3 互動地圖 - 放在底部 -->
+    <div style="margin:2.5rem 0 1rem; text-align:center;">
+        <strong>Day 3 白色戀人公園周邊互動地圖</strong><br>
+        <small style="color:#666; display:block; margin:0.5rem 0;">
+            可自由縮放、拖曳、點擊標記查看細節、搜尋路線
+        </small>
+        <iframe 
+            src="https://www.google.com/maps/d/u/0/embed?mid=1IGv_x7yYQWuRAB147fP9viFH9-FcE3o&ehbc=2E312F"
+            width="100%" 
+            height="500" 
+            style="border:0; border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.2);"
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</div>`,
 
         4: `<div class="detail-day">
             <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 4　藻岩山滑雪場＋藻岩山夜景</h2>
